--- a/semester-2/week-5.html
+++ b/semester-2/week-5.html
@@ -9,8 +9,7 @@
     <base href="/algorithmic-identities/">
 
     <link rel="icon" href="favicon.png" />
-    <!--<link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">-->
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -65,7 +64,8 @@
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                         <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
-                        <li><a href="semester-2/week-5.html" class="active"><strong>W5</strong> : Exhibit 3D Model</a></li>
+                        <li><a href="semester-2/week-5.html" class="active"><strong>W5</strong> : Exhibit 3D Model</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -110,9 +110,10 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/media-spectacle.jpg" alt="">
-                <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
-                        Guy Debord, 1973</em></figcaption>
+                <img src="assets/images/w2-w5-hero.jpg" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>Housing No. 8 (Laboratorio de
+                        Vivienda)</strong><em>
+                        MOS - Meredith, Sample</em></figcaption>
             </section>
 
             <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
@@ -121,7 +122,7 @@
                 <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
 
                     <div style="flex:1; overflow:hidden;">
-                        <img src="/assets/images/s2-w5-exhibit-consult.jpg" class="lightbox-trigger"
+                        <img src="assets/images/s2-w5-exhibit-consult.jpg" class="lightbox-trigger"
                             style="width:100%; height:100%; object-fit:contain; transform:scale(1.1); cursor:pointer;">
                     </div>
 
@@ -129,11 +130,152 @@
 
                 <div class="exp-block">
                     <h2><strong>Artist or Curator?</strong></h2>
-                    <p>This week's discussion with Andreas fundamentally shifted how I understand my role within the exhibition. The question that surfaced was deceptively simple, yet conceptually loaded. <mark><em><strong>Am I just an artist presenting a singular work, or am I also the curator who is responsible for shaping and framing the entire exhibition?</strong></em></mark>
+                    <p>This week's discussion with Andreas fundamentally shifted how I understand my role within the
+                        exhibition. The question that surfaced was deceptively simple, yet conceptually loaded.
+                        <mark><em><strong>Am I just an artist presenting a singular work, or am I also the curator who
+                                    is responsible for shaping and framing the entire exhibition?</strong></em></mark>
                     </p>
-                    <p>At first, I had imagined my project as a standable exhibition. Something immersive, self-contained, and conceptually strong enough to exist on its own. However, I realised it would be more impactful if situated within a larger exhibition themed around algorithms. Algorithms do not operate in isolation; they function within systems. Positioning my work within a broader algorithmic context mirrors this logic.</p>
-                    <p>As the artist, I develop the installations. I envision multiple installations rather than one singular piece. Each installation isolates a specific pillar such as datafication, feedback loops, while collectively forming a cohesive experience about <strong>Algorithmic Identity</strong>.</p>
-                    <p>Designing the floor plan and modelling the 3D space helped me understand how visitors might move through these installations and encounter them sequentially. The exhibition therefore becomes more than a display; it becomes a structured environment where audiences experience how algorithmic systems construct identity.</p>
+                    <p>At first, I had imagined my project as a standable exhibition. Something immersive,
+                        self-contained, and conceptually strong enough to exist on its own. However, I realised it would
+                        be more impactful if situated within a larger exhibition themed around algorithms. Algorithms do
+                        not operate in isolation; they function within systems. Positioning my work within a broader
+                        algorithmic context mirrors this logic.</p>
+                    <p>As the artist, I develop the installations. I envision multiple installations rather than one
+                        singular piece. Each installation isolates a specific pillar such as datafication, feedback
+                        loops, while collectively forming a cohesive experience about <strong>Algorithmic
+                            Identity</strong>.</p>
+                    <p>Designing the floor plan and modelling the 3D space helped me understand how visitors might move
+                        through these installations and encounter them sequentially. The exhibition therefore becomes
+                        more than a display; it becomes a structured environment where audiences experience how
+                        algorithmic systems construct identity.</p>
+                </div>
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: -10px;">
+                <div class="exp-block">
+                    <h3><strong>Keyterms Recap</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                </div>
+            </section>
+
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full" style="margin-bottom: 10px;">
+                <img src="assets/images/s2-w5-keyterms-recap.png" alt="">
+            </section>
+
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <p><em>Training Humans</em> exposes how facial-recognition datasets are built by collecting,
+                        classifying, and commodifying human images, often without consent.</p>
+                    <p>Exploring this work pushed me to confront the uncomfortable reality behind AI systems: what we
+                        call "intelligence" is built on vast archives of human faces taken, sorted, and labelled
+                        <strong>without consent.</strong> It made me realise that algorithmic systems don't just analyse
+                        identity. They actively produce it by imposing categories, assumptions, and biases onto people
+                        who never chose to participate. These systems are grounded in choices about who gets seen, how
+                        they are defined, and what is done with their data.
+                    </p>
+                </div>
+
+                <div class="exp-block">
+                    <p><em>AI: More than Human</em> is an exhibition exploring the evolving relationship between humans
+                        and technology.</p>
+                    <p>This exhibition shifted my understanding of AI from a purely technical system to a deeply human
+                        story about co-creation. AI is not something outside of us. It is <strong>built through our
+                            data</strong>, our narratives, and our cultural histories. The installations highlights how
+                        easily boundaries blur: where human intention ends and machine inference begins. It made me more
+                        aware of how AI ssytems quietly reshape perception and behaviour, not through force but through
+                        participation.</p>
+                </div>
+            </section>
+
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full">
+                <img src="assets/images/s2-w5-asm-wireframe.jpeg" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>Building Section Wireframe</strong><em>
+                        ArtScience Museum</em></figcaption>
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: 60px;">
+                <div class="exp-block">
+                    <h3><strong>ArtScience Museum / Floorplan</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p>I envision <strong>ArtScience Museum</strong> as an ideal venue for exhibiting this project
+                        because its curatorial direction consistently bridges technology, art, and speculative futures.
+                        The museum frequently stages immersive, interactive exhibitions that explore digital systems,
+                        artificial intelligence, and data-driven environments. These contexts closely aligned with my
+                        investigation into <strong>Algorithmic Identities</strong>. Its audience is also diverse,
+                        attracting both art-goers, and individuals interested in science and innovation. Situating my
+                        work within a space strengthens its relevance, positioning it not just as a design project, but
+                        as a critical reflection on how algorithmic systems shape contemporary life.</p>
+                </div>
+            </section>
+
+            <section class="exp-row split" style="margin-bottom:10px;">
+
+                <a href="https://www.fondazioneprada.org/project/training-humans/?lang=en" target="_blank"
+                    style="text-decoration:none; color:inherit; display:block;">
+
+                    <figure class="exp-block"
+                        style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
+
+                        <img src="assets/images/trevor-paglen.jpg" alt=""
+                            style="width:100%; height:100%; object-fit:cover; flex:1;">
+
+                        <figcaption style="font-size:12px; margin-top:20px; text-align:left;">
+                            <strong>Training Humans</strong> <em>Trevor Paglen, Kate Crawford</em>
+                        </figcaption>
+
+                    </figure>
+
+                </a>
+
+                <a href="https://artsandculture.google.com/project/ai-more-than-human" target="_blank"
+                    style="text-decoration:none; color:inherit; display:block;">
+
+                    <figure class="exp-block"
+                        style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
+
+                        <img src="assets/images/more-than-human.jpeg" alt=""
+                            style="width:100%; height:100%; object-fit:cover; flex:1;">
+
+                        <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                            <strong>AI: More than Human</strong> <em>Google Arts & Culture, Barbican</em>
+                        </figcaption>
+
+                    </figure>
+
+                </a>
+
+            </section>
+
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <p><em>Training Humans</em> exposes how facial-recognition datasets are built by collecting,
+                        classifying, and commodifying human images, often without consent.</p>
+                    <p>Exploring this work pushed me to confront the uncomfortable reality behind AI systems: what we
+                        call "intelligence" is built on vast archives of human faces taken, sorted, and labelled
+                        <strong>without consent.</strong> It made me realise that algorithmic systems don't just analyse
+                        identity. They actively produce it by imposing categories, assumptions, and biases onto people
+                        who never chose to participate. These systems are grounded in choices about who gets seen, how
+                        they are defined, and what is done with their data.
+                    </p>
+                </div>
+
+                <div class="exp-block">
+                    <p><em>AI: More than Human</em> is an exhibition exploring the evolving relationship between humans
+                        and technology.</p>
+                    <p>This exhibition shifted my understanding of AI from a purely technical system to a deeply human
+                        story about co-creation. AI is not something outside of us. It is <strong>built through our
+                            data</strong>, our narratives, and our cultural histories. The installations highlights how
+                        easily boundaries blur: where human intention ends and machine inference begins. It made me more
+                        aware of how AI ssytems quietly reshape perception and behaviour, not through force but through
+                        participation.</p>
                 </div>
             </section>
 
