--- a/semester-2/week-5.html
+++ b/semester-2/week-5.html
@@ -168,26 +168,25 @@
 
             <section class="exp-row split">
                 <div class="exp-block">
-                    <p><em>Training Humans</em> exposes how facial-recognition datasets are built by collecting,
-                        classifying, and commodifying human images, often without consent.</p>
-                    <p>Exploring this work pushed me to confront the uncomfortable reality behind AI systems: what we
-                        call "intelligence" is built on vast archives of human faces taken, sorted, and labelled
-                        <strong>without consent.</strong> It made me realise that algorithmic systems don't just analyse
-                        identity. They actively produce it by imposing categories, assumptions, and biases onto people
-                        who never chose to participate. These systems are grounded in choices about who gets seen, how
-                        they are defined, and what is done with their data.
+                    <p>There are two types of data collected to form the <strong>data double</strong>, <strong>biometric
+                            data</strong> and <strong>behavioural data</strong>. Biometric data comes from systems like
+                        facial recognition, which map measurable features such as the distance between the eyes, the
+                        contour of the lips, or the shape of the nose. Behvaioural data, on the other hand, is gathered
+                        from the user's digital interactions such as what they click, like, share, upload, or browse.
+                        While biometric data captures how the user looks, behavioural data captures how they act.
+                        Together, they form the raw material of <strong>Algorithmic Identity</strong>.
                     </p>
                 </div>
 
                 <div class="exp-block">
-                    <p><em>AI: More than Human</em> is an exhibition exploring the evolving relationship between humans
-                        and technology.</p>
-                    <p>This exhibition shifted my understanding of AI from a purely technical system to a deeply human
-                        story about co-creation. AI is not something outside of us. It is <strong>built through our
-                            data</strong>, our narratives, and our cultural histories. The installations highlights how
-                        easily boundaries blur: where human intention ends and machine inference begins. It made me more
-                        aware of how AI ssytems quietly reshape perception and behaviour, not through force but through
-                        participation.</p>
+                    <p>When these two streams of data are combines, they are processed by algorithms to construct an
+                        <strong>Algorithmic Identity</strong> which is a profile inferred by AI systems. This identity
+                        is not a direct reflection of who the user believes they are, but a calculated persona built
+                        from patterns, predictions, and probabilities. It shapes what content the user sees, what ads
+                        are targetted at them, and even how platforms categorise them. Through this exhibit, I aim to
+                        make this invisible construction visible, helping visitors understand how everyday actions
+                        accumulate into a system-generated version of the self.
+                    </p>
                 </div>
             </section>
 
@@ -218,66 +217,124 @@
 
             <section class="exp-row split" style="margin-bottom:10px;">
 
-                <a href="https://www.fondazioneprada.org/project/training-humans/?lang=en" target="_blank"
-                    style="text-decoration:none; color:inherit; display:block;">
+                <figure class="exp-block"
+                    style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                    <figure class="exp-block"
-                        style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
+                    <img src="assets/images/s2-w6-asm-basement-floorplan.png"
+                        data-src="/assets/images/s2-w6-asm-basement-floorplan.png" class="lightbox-trigger" alt=""
+                        style="width:100%; height:100%; object-fit:cover; flex:1; cursor:pointer;">
 
-                        <img src="assets/images/trevor-paglen.jpg" alt=""
-                            style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:left;">
+                        <strong>Exhibition Floorplan / Basement 2</strong> <em>ASM</em>
+                    </figcaption>
 
-                        <figcaption style="font-size:12px; margin-top:20px; text-align:left;">
-                            <strong>Training Humans</strong> <em>Trevor Paglen, Kate Crawford</em>
-                        </figcaption>
+                </figure>
 
-                    </figure>
+                <figure class="exp-block"
+                    style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
 
-                </a>
+                    <img src="assets/images/s2-w6-asm-solo-floorplan.png"
+                        data-src="/assets/images/s2-w6-asm-solo-floorplan.png" class="lightbox-trigger" alt=""
+                        style="width:100%; height:100%; object-fit:cover; flex:1; cursor:pointer;">
 
-                <a href="https://artsandculture.google.com/project/ai-more-than-human" target="_blank"
-                    style="text-decoration:none; color:inherit; display:block;">
+                    <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
+                        <strong>Exhibit Floorplan / Basement 2</strong> <em>ASM</em>
+                    </figcaption>
 
-                    <figure class="exp-block"
-                        style="margin:0; padding:0; display:flex; flex-direction:column; cursor:pointer;">
-
-                        <img src="assets/images/more-than-human.jpeg" alt=""
-                            style="width:100%; height:100%; object-fit:cover; flex:1;">
-
-                        <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
-                            <strong>AI: More than Human</strong> <em>Google Arts & Culture, Barbican</em>
-                        </figcaption>
-
-                    </figure>
-
-                </a>
+                </figure>
 
             </section>
 
+
             <section class="exp-row split">
                 <div class="exp-block">
-                    <p><em>Training Humans</em> exposes how facial-recognition datasets are built by collecting,
-                        classifying, and commodifying human images, often without consent.</p>
-                    <p>Exploring this work pushed me to confront the uncomfortable reality behind AI systems: what we
-                        call "intelligence" is built on vast archives of human faces taken, sorted, and labelled
-                        <strong>without consent.</strong> It made me realise that algorithmic systems don't just analyse
-                        identity. They actively produce it by imposing categories, assumptions, and biases onto people
-                        who never chose to participate. These systems are grounded in choices about who gets seen, how
-                        they are defined, and what is done with their data.
+                    <p>To situate my work within a real context, I search for ArtScience Museum's Basement 2 Floorplan
+                        and studied how the larger exhibition might be organised spatially. Rather than designing in
+                        isolation, I mapped my exhibit directly onto the exisiting layout. I chose Section 5, placing it
+                        before the exit. It is an intentional move as visitors would have already encountered multiple
+                        works, allowing my exhibit to function as a moment of reflection and systhesis before departure.
+                        It acts as a near-concluding experience, prompting visitors to reconsider what they have seen
+                        through the lens of <strong>Algorithmic Identity</strong>.
                     </p>
                 </div>
 
                 <div class="exp-block">
-                    <p><em>AI: More than Human</em> is an exhibition exploring the evolving relationship between humans
-                        and technology.</p>
-                    <p>This exhibition shifted my understanding of AI from a purely technical system to a deeply human
-                        story about co-creation. AI is not something outside of us. It is <strong>built through our
-                            data</strong>, our narratives, and our cultural histories. The installations highlights how
-                        easily boundaries blur: where human intention ends and machine inference begins. It made me more
-                        aware of how AI ssytems quietly reshape perception and behaviour, not through force but through
-                        participation.</p>
+                    <p>Using existing exhibition floorplans as references, I began planning how I wanted my own exhibit
+                        to unfold within the allocated space. Having a real spatial template was extremely helpful, as
+                        it allowed me to think carefully about installation placements, circulation paths, etc. I
+                        designed the layout to guide visitors through the three sections, biometric data, behavioural
+                        data, and Algorithmic Identity as a narrative progression. The spatial arrangement supports this
+                        conceptual flow, ensuring that each installation builds upon the previous one, resulting in a
+                        coherent and immersive experience, rather than three disconnected works.
+                    </p>
                 </div>
             </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: 60px;">
+                <div class="exp-block">
+                    <h3><strong>Installations</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p><strong><mark style="background-color:#ec008c; color:#fff; padding:2px 6px;">① Biometric
+                                Data</mark></strong></p>
+                    <p>This installation uses a live camera to capture each participant's portrait. TouchDesigner and
+                        MediaPipe are used to map facial landmarks, while blob tracking extracts measurable values from
+                        facial contours and movement. The camera becomes a tool for data translation. It transforms the
+                        face into numerical coordinates, and mirrors how biometric systems operate in everyday
+                        surveillance environments. It foregrounds how something that is so deeply personal such as our
+                        personal features is quietly converted into machine-readable data within algorithmic
+                        systems.<em>This prototype is still in refinement, images used are placeholders.</em>
+                    </p><br>
+                    <p><strong><mark style="background-color:#0F13FF; color:#fff; padding:2px 6px;">② Behavioural
+                                Data</mark></strong></p>
+                    <p>Using <strong>Prototype 6: World of Brainrot</strong>, it requires participants to actively
+                        "feed" the system through their clicks and interactions. As users navigate and respond, the
+                        system records their behavioural data in real time. What feels like casual engagement becomes a
+                        process of continuous data production. This installation explores how platforms extract value
+                        from attention and repetition, turning simple gestures into measureable metrics. <em>This
+                            prototype is still in refinement, images used are placeholders.</em></p><br>
+                    <p><strong><mark style="background-color:#FFFB00; color:#000000; padding:2px 6px;">③ Construction of
+                                Algorithmic Identity</mark></strong></p>
+                    <p>The last installation is a LED wall display that merges the biometric and behavioural data
+                        collected from the previous installations into a single, woven ouput which is an algorithmically
+                        constructed identity. The use of many LED screens on the wall amplifies the presences of this
+                        system-generated self, confronting participants with a version of identity assembled from
+                        fragments of data. By weaving facial mappings and interation metrics together, the installation
+                        visualises how algorithms synthesise diverse inputs into coherent, yet reductive, digital
+                        personas.</p>
+                </div>
+            </section>
+
+            <!-- FULL WIDTH SLIDESHOW -->
+            <section class="exp-row full">
+
+                <div class="slideshow-container">
+
+                    <div class="slide active">
+                        <img src="assets/images/s2-w5-installation-1.png" alt="">
+                    </div>
+
+                    <div class="slide">
+                        <img src="assets/images/s2-w5-installation-2.png" alt="">
+                    </div>
+
+                    <div class="slide">
+                        <img src="assets/images/s2-w5-installation-3.png" alt="">
+                    </div>
+
+                    <!-- DOT NAVIGATION -->
+                    <div class="dots">
+                        <span class="dot active" onclick="currentSlide(0)"></span>
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                    </div>
+
+                </div>
+
+            </section>
+
 
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
             <div class="week-nav-controls">
@@ -397,6 +454,36 @@
                 lightbox.setAttribute("aria-hidden", "true");
             });
         });
+
+        let slides = document.querySelectorAll('.slide');
+        let dots = document.querySelectorAll('.dot');
+        let currentIndex = 0;
+        let slideInterval = setInterval(nextSlide, 3000); // 3 seconds
+
+        function showSlide(index) {
+            slides.forEach((slide, i) => {
+                slide.classList.remove('active');
+                dots[i].classList.remove('active');
+            });
+
+            slides[index].classList.add('active');
+            dots[index].classList.add('active');
+            currentIndex = index;
+        }
+
+        function nextSlide() {
+            currentIndex++;
+            if (currentIndex >= slides.length) {
+                currentIndex = 0;
+            }
+            showSlide(currentIndex);
+        }
+
+        function currentSlide(index) {
+            clearInterval(slideInterval); // reset timer when user clicks
+            showSlide(index);
+            slideInterval = setInterval(nextSlide, 3000);
+        }
 
     </script>
 
