--- a/semester-2/week-5.html
+++ b/semester-2/week-5.html
@@ -192,9 +192,9 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/s2-w5-asm-wireframe.jpeg" alt="">
-                <figcaption style="font-size: 12px; text-align: left;"><strong>Building Section Wireframe</strong><em>
-                        ArtScience Museum</em></figcaption>
+                <img src="assets/images/asm-hero.jpeg" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>ArtScience Museum</strong><em>
+                        Safdie Architects</em></figcaption>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -331,6 +331,103 @@
                         <span class="dot" onclick="currentSlide(2)"></span>
                     </div>
 
+                </div>
+
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: 60px;">
+                <div class="exp-block">
+                    <h3><strong>3D Modelling / Blender</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p>I constructed a 3D model of the exhibition in Blender to visualise spatial relationships,
+                        circulation flow, pillar placements, and installation sequencing. This digital mock-up allowed
+                        me to test spatial and installation arrangments, and narrative progression before translating
+                        the concept into a physical exhibition setting.</p>
+                </div>
+            </section>
+
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full">
+                <img src="assets/images/s2-w5-3d-model-full.png" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>[A-I]: Algorithmic Identity
+                        Exhibit</strong><em>
+                        3D Model, Blender</em></figcaption>
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: 10px;">
+                <div class="exp-block">
+                    <h3><strong>Blender Process</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                </div>
+            </section>
+
+            <!-- 4 COLUMNS -->
+            <section class="exp-row cols-4">
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-1.png" data-src="/assets/images/blender-process-1.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-2.png" data-src="/assets/images/blender-process-2.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-3.png" data-src="/assets/images/blender-process-3.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-4.png" data-src="/assets/images/blender-process-4.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-5.png" data-src="/assets/images/blender-process-5.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-6.png" data-src="/assets/images/blender-process-6.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-7.png" data-src="/assets/images/blender-process-7.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-8.png" data-src="/assets/images/blender-process-8.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-9.png" data-src="/assets/images/blender-process-9.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-10.png" data-src="/assets/images/blender-process-10.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-11.png" data-src="/assets/images/blender-process-11.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
+                </div>
+
+                <div class="exp-block">
+                    <img src="assets/images/blender-process-12.png" data-src="/assets/images/blender-process-12.png"
+                        class="lightbox-trigger" alt="" style="cursor:pointer;">
                 </div>
 
             </section>
