--- a/semester-2/week-5.html
+++ b/semester-2/week-5.html
@@ -285,7 +285,7 @@
                         face into numerical coordinates, and mirrors how biometric systems operate in everyday
                         surveillance environments. It foregrounds how something that is so deeply personal such as our
                         personal features is quietly converted into machine-readable data within algorithmic
-                        systems.<em>This prototype is still in refinement, images used are placeholders.</em>
+                        systems. <em>This prototype is still in refinement, images used are placeholders.</em>
                     </p><br>
                     <p><strong><mark style="background-color:#0F13FF; color:#fff; padding:2px 6px;">② Behavioural
                                 Data</mark></strong></p>
@@ -303,7 +303,7 @@
                         system-generated self, confronting participants with a version of identity assembled from
                         fragments of data. By weaving facial mappings and interation metrics together, the installation
                         visualises how algorithms synthesise diverse inputs into coherent, yet reductive, digital
-                        personas.</p>
+                        personas. <em>This prototype is still in refinement, images used are placeholders.</em></p>
                 </div>
             </section>
 
@@ -430,6 +430,18 @@
                         class="lightbox-trigger" alt="" style="cursor:pointer;">
                 </div>
 
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split" style="margin-bottom: 60px;">
+                <div class="exp-block">
+                    <h3><strong>Challenges Faced</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p>Creating the 3D exhibition model in Blender was far more challenging than I anticipated, especially since I was new to 3D modelling using Blender. I spent around 3 days trying to create this entire model. <em>Shoutout to Carissa for teaching me more about Blender, rendering solutions, as well as creating plastic PBR.</em></p>
+                    <p>I struggled with basic operations such as selecting and extruding the correct faces, aligning objects accurately to the floorplan, and ensuring surfaces rendered on the intended side. Navigating orientation within a three-dimensional space was particularly frustrating as there were issues with the zoom at times. Distinguishing between global and local axes, camera views, and object origins often disrupted my workflow. Even when the structure was technically complete, the final render felt visually flat and unrefined. The lighting appeared dull, materials lacked depth, and the overall scene did not reflect the clarity I had imagined.</p>
+                </div>
             </section>
 
 
